@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013 ChaosCore>
+ * Copyright (C) 2013 ChaosCore and GaryMoveOut
  *
  */
 
@@ -285,7 +285,7 @@ enum Texts
     SAY_NEW_ROCKETEERS_SPAWNED       = 8,
     SAY_NEW_BATTLE_MAGE_SPAWNED      = 9,
     SAY_HORDE_VICTORY                = 10,
-    SAY_HORDE_DEFEAT                 = 11, // How will we handle that case ? Ie. the player loses
+    SAY_HORDE_DEFEAT                 = 11,
 
     SAY_HIGH_OVERLORD_SAURFANG_NOT_VISUAL = 0,
     SAY_BOARDING_SKYBREAKER_SAURFANG      = 1,
@@ -920,20 +920,20 @@ class npc_muradin_gunship : public CreatureScript
                         //Check, if there really is no mage
                         if (me->GetEntry() != NPC_GB_SKYBREAKER_SORCERERS)
                         {
-                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) == IN_PROGRESS)
-                                events.ScheduleEvent(EVENT_SPAWN_MAGE, 33000); // try timer
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
+                                events.ScheduleEvent(EVENT_SPAWN_MAGE, 33000); 
                         }
                         break;
                     case ACTION_ROCK_DIE:
                         ++RocketerDieCount; 
                         if (RocketerDieCount == RocketerCount)
-                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) == IN_PROGRESS)
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
                                 events.ScheduleEvent(EVENT_RESPAWN_ROCKETEER, 60000);
                         break;
                     case ACTION_AXES_RIFL_DIE:
                         ++RiflDieCount;
                         if (RiflDieCount == RiflCount)
-                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) == IN_PROGRESS)
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
                                 events.ScheduleEvent(EVENT_RESPAWN_AXES_RIFLEMEN, 60000);
                         break;
                 }
@@ -1033,7 +1033,7 @@ class npc_muradin_gunship : public CreatureScript
                             Talk(SAY_INTRO_ALLIANCE_7);
                             break;
                         case EVENT_SUMMON_PORTAL:
-                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) == IN_PROGRESS)
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE) 
                             {
                                 events.ScheduleEvent(EVENT_BOARDING_TALK, 10000);
                                 events.ScheduleEvent(EVENT_BOARDING_GUNSHIP, 2500); // TODO: Fix the timers
@@ -1043,7 +1043,7 @@ class npc_muradin_gunship : public CreatureScript
                             break;
                         case EVENT_RENDING_THROW:
                             if (UpdateVictim())
-                                if (me->getVictim()->IsWithinDistInMap(me, 50.0f, false)) // Todo: Fix the distance
+                                if (me->getVictim()->IsWithinDistInMap(me, 30.0f, false))
                                 {
                                     DoCastVictim(SPELL_RENDING_THROW);
                                     EventScheduled = false;
@@ -1058,20 +1058,23 @@ class npc_muradin_gunship : public CreatureScript
                             Talk(SAY_BOARDING_SKYBREAKER_1);
                             break;
                         case EVENT_BOARDING_GUNSHIP:
-                            if (Creature* pSaurfang = ObjectAccessor::GetCreature(*me, _instance->GetData64(DATA_HIGH_OVERLORD_SAURFANG_NOT_VISUAL)))
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
                             {
-                                pSaurfang->AI()->Talk(SAY_BOARDING_SKYBREAKER_SAURFANG);
-                            }
-                            if(Creature* Sergante = skybreaker->AddNPCPassengerInInstance(NPC_GB_KORKRON_SERGANTE, -15.51547f, -0.160213f, 20.87252f, 1.56211f))
-                            {
-                                Sergante->CastSpell(Sergante, SPELL_TELEPORT_VISUAL, true);
-                            }
-                            events.ScheduleEvent(EVENT_SUMMON_PORTAL, 90000);
-                            events.ScheduleEvent(EVENT_BOARDING_REAVERS_MARINE, 3000);
-                            count = 0;
+                                if (Creature* pSaurfang = ObjectAccessor::GetCreature(*me, _instance->GetData64(DATA_HIGH_OVERLORD_SAURFANG_NOT_VISUAL)))
+                                {
+                                    pSaurfang->AI()->Talk(SAY_BOARDING_SKYBREAKER_SAURFANG);
+                                }
+                                if (Creature* Sergante = skybreaker->AddNPCPassengerInInstance(NPC_GB_KORKRON_SERGANTE, -15.51547f, -0.160213f, 20.87252f, 1.56211f))
+                                {
+                                    Sergante->CastSpell(Sergante, SPELL_TELEPORT_VISUAL, true);
+                                }
+                                events.ScheduleEvent(EVENT_SUMMON_PORTAL, 90000);
+                                events.ScheduleEvent(EVENT_BOARDING_REAVERS_MARINE, 3000);
+                                count = 0;
+                            } 
                             break;
                         case EVENT_BOARDING_REAVERS_MARINE:
-                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) == IN_PROGRESS)
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
                             {
                                 if (count <= SummonCount)
                                 {
@@ -1105,8 +1108,11 @@ class npc_muradin_gunship : public CreatureScript
                             _instance->SetBossState(DATA_GUNSHIP_EVENT, NOT_STARTED);
                             break;
                         case EVENT_RESTART_EVENT:
-                            _instance->SetBossState(DATA_GUNSHIP_EVENT, FAIL);
-                            RestartEvent(skybreaker, CheckUnfriendlyShip(me,_instance,DATA_GB_HIGH_OVERLORD_SAURFANG), map, ALLIANCE);
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
+                            {
+                                _instance->SetBossState(DATA_GUNSHIP_EVENT, FAIL);
+                                RestartEvent(skybreaker, CheckUnfriendlyShip(me,_instance,DATA_GB_HIGH_OVERLORD_SAURFANG), map, ALLIANCE);
+                            } 
                             break;
                         case EVENT_SPAWN_MAGE:
                             if (me->GetEntry() != NPC_GB_SKYBREAKER_SORCERERS)
@@ -1355,7 +1361,7 @@ class npc_korkron_axethrower_rifleman : public CreatureScript
                 if (me->HasUnitState(UNIT_STATE_CASTING))
                     return;
 
-                me->SetFlag(UNIT_FIELD_FLAGS, UNIT_FLAG_DISABLE_MOVE); // Dodato
+                // me->SetFlag(UNIT_FIELD_FLAGS, UNIT_FLAG_DISABLE_MOVE); // Dodato
                 me->AI()->AttackStart(SelectRandomPlayerInTheMaps(me->GetMap()));
 
                 if (!UpdateVictim())
@@ -1815,12 +1821,6 @@ class npc_gunship_cannon : public CreatureScript
                 }
                 else
                 {
-                    //me->RemoveFlag(UNIT_FIELD_FLAGS, UNIT_FLAG_NOT_SELECTABLE);
-                    //me->AddExtraUnitMovementFlag(MOVEMENTFLAG2_FULL_SPEED_TURNING);
-                    //me->AddExtraUnitMovementFlag(MOVEMENTFLAG2_ALWAYS_ALLOW_PITCHING);
-                    //me->AddExtraUnitMovementFlag(MOVEMENTFLAG2_FULL_SPEED_PITCHING);
-
-                    //Try
                     me->RemoveFlag(UNIT_FIELD_FLAGS, UNIT_FLAG_NOT_SELECTABLE);
                     me->RemoveExtraUnitMovementFlag(MOVEMENTFLAG_STRAFE_LEFT);
                     me->RemoveExtraUnitMovementFlag(MOVEMENTFLAG_STRAFE_RIGHT);
@@ -2257,29 +2257,35 @@ class npc_saurfang_gunship : public CreatureScript
                             Talk(SAY_INTRO_HORDE_4);
                             break;
                         case EVENT_SUMMON_PORTAL:
-                            orgrimmar->AddNPCPassengerInInstance(NPC_GB_PORTAL, 15.03016f, -7.00016f, 37.70952f, 1.55138f);
-                            CheckUnfriendlyShip(me, _instance, DATA_MURADIN_BRONZEBEARD_NOT_VISUAL)->AddNPCPassengerInInstance(NPC_GB_PORTAL, 3.51547f, -0.160213f, 20.87252f, 3.05033f);
-                            events.ScheduleEvent(EVENT_BOARDING_TALK, 10000);
-                            events.ScheduleEvent(EVENT_BOARDING_GUNSHIP, 2500); // TODO: Fix the timers
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
+                            {
+                                orgrimmar->AddNPCPassengerInInstance(NPC_GB_PORTAL, 15.03016f, -7.00016f, 37.70952f, 1.55138f);
+                                CheckUnfriendlyShip(me, _instance, DATA_MURADIN_BRONZEBEARD_NOT_VISUAL)->AddNPCPassengerInInstance(NPC_GB_PORTAL, 3.51547f, -0.160213f, 20.87252f, 3.05033f);
+                                events.ScheduleEvent(EVENT_BOARDING_TALK, 10000);
+                                events.ScheduleEvent(EVENT_BOARDING_GUNSHIP, 2500); // TODO: Fix the timers
+                            } 
                             break;
                         case EVENT_BOARDING_TALK:
                             Talk(SAY_BOARDING_ORGRIMS_HAMMER_1);
                             break;
                         case EVENT_BOARDING_GUNSHIP:
-                             count = 0;
-                             if (Creature* pSaurfang = ObjectAccessor::GetCreature(*me, _instance->GetData64(DATA_MURADIN_BRONZEBEARD_NOT_VISUAL)))
-                             {
-                                 pSaurfang->AI()->Talk(SAY_BOARDING_SKYBREAKER_MURADIN);
-                             }
-                             if (Creature* Sergante = orgrimmar->AddNPCPassengerInInstance(NPC_GB_SKYBREAKER_SERGANTE, 15.03016f, -7.00016f, 37.70952f, 1.55138f))
-                             {
-                                 Sergante->CastSpell(Sergante, SPELL_TELEPORT_VISUAL, true);
-                             }
-                             events.ScheduleEvent(EVENT_BOARDING_REAVERS_MARINE, 3000);
-                             events.ScheduleEvent(EVENT_SUMMON_PORTAL, 90000);
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
+                            {
+                                count = 0;
+                                if (Creature* pSaurfang = ObjectAccessor::GetCreature(*me, _instance->GetData64(DATA_MURADIN_BRONZEBEARD_NOT_VISUAL)))
+                                {
+                                    pSaurfang->AI()->Talk(SAY_BOARDING_SKYBREAKER_MURADIN);
+                                }
+                                if (Creature* Sergante = orgrimmar->AddNPCPassengerInInstance(NPC_GB_SKYBREAKER_SERGANTE, 15.03016f, -7.00016f, 37.70952f, 1.55138f))
+                                {
+                                    Sergante->CastSpell(Sergante, SPELL_TELEPORT_VISUAL, true);
+                                }
+                                events.ScheduleEvent(EVENT_BOARDING_REAVERS_MARINE, 3000);
+                                events.ScheduleEvent(EVENT_SUMMON_PORTAL, 90000);
+                            } 
                             break;
                         case EVENT_BOARDING_REAVERS_MARINE:
-                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) == IN_PROGRESS)
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
                             {
                                 if (count <= SummonCount)
                                 {
@@ -2313,12 +2319,15 @@ class npc_saurfang_gunship : public CreatureScript
                             _instance->SetBossState(DATA_GUNSHIP_EVENT, NOT_STARTED);
                             break;
                         case EVENT_RESTART_EVENT:
-                            _instance->SetBossState(DATA_GUNSHIP_EVENT, FAIL);
-                            RestartEvent(orgrimmar, CheckUnfriendlyShip(me,_instance,DATA_GB_MURADIN_BRONZEBEARD), map, HORDE);
+                            if (_instance->GetBossState(DATA_GUNSHIP_EVENT) != DONE)
+                            {
+                                _instance->SetBossState(DATA_GUNSHIP_EVENT, FAIL);
+                                RestartEvent(orgrimmar, CheckUnfriendlyShip(me,_instance,DATA_GB_MURADIN_BRONZEBEARD), map, HORDE);
+                            } 
                             break;
                         case EVENT_RENDING_THROW:
                             if (UpdateVictim())
-                                if (me->getVictim()->IsWithinDistInMap(me, 50.0f, false)) // Todo: Fix the distance
+                                if (me->getVictim()->IsWithinDistInMap(me, 30.0f, false))
                                 {
                                     DoCastVictim(SPELL_RENDING_THROW);
                                     EventScheduled = false;
@@ -3111,14 +3120,14 @@ class transport_gunship : public TransportScript
 };
 
 /* Remove Rocket Pack - 70713 */
-class spell_icc_remove_rocket_pack : public SpellScriptLoader
+class spell_remove_rocket_pack : public SpellScriptLoader
 {
     public:
-        spell_icc_remove_rocket_pack() : SpellScriptLoader("spell_icc_remove_rocket_pack") { }
+        spell_remove_rocket_pack() : SpellScriptLoader("spell_remove_rocket_pack") { }
  
-        class spell_icc_remove_rocket_pack_SpellScript : public SpellScript
+        class spell_remove_rocket_pack_SpellScript : public SpellScript
         {
-            PrepareSpellScript(spell_icc_remove_rocket_pack_SpellScript);
+            PrepareSpellScript(spell_remove_rocket_pack_SpellScript);
  
             void HandleEffect(SpellEffIndex /*effIndex*/)
             {
@@ -3132,13 +3141,13 @@ class spell_icc_remove_rocket_pack : public SpellScriptLoader
  
             void Register()
             {
-                OnEffectHit += SpellEffectFn(spell_icc_remove_rocket_pack_SpellScript::HandleEffect, EFFECT_0, SPELL_EFFECT_SCRIPT_EFFECT);
+                OnEffectHit += SpellEffectFn(spell_remove_rocket_pack_SpellScript::HandleEffect, EFFECT_0, SPELL_EFFECT_SCRIPT_EFFECT);
             }
         };
  
         SpellScript* GetSpellScript() const
         {
-            return new spell_icc_remove_rocket_pack_SpellScript();
+            return new spell_remove_rocket_pack_SpellScript();
         }
 };
 
@@ -3286,68 +3295,36 @@ class spell_gb_burning_pitch : public SpellScriptLoader
         }
 };
 
-/* Rocket Pack - 69188 */
-/* 68721 is a big red ball */
-/* 69193 is the damage when landing, it does not include the visual (which is 69192) */
-class spell_icc_rocket_pack : public SpellScriptLoader
+/* spell 68645 Rocket Pack */
+class spell_rocket_pack : public SpellScriptLoader
 {
     public:
-        spell_icc_rocket_pack() : SpellScriptLoader("spell_icc_rocket_pack") { }
+        spell_rocket_pack() : SpellScriptLoader("spell_rocket_pack") { }
  
-        class spell_icc_rocket_pack_SpellScript : public SpellScript
+        class spell_rocket_pack_SpellScript : public SpellScript
         {
-            PrepareSpellScript(spell_icc_rocket_pack_SpellScript);
+            PrepareSpellScript(spell_rocket_pack_SpellScript);
  
-            SpellCastResult CheckRequirement()
+            void OnApply(AuraEffect const* /*aurEff*/, AuraEffectHandleModes /*mode*/)
             {
-                Unit* caster = GetOriginalCaster();
-                if (caster->GetTypeId() != TYPEID_PLAYER)
-                    return SPELL_FAILED_TARGET_NOT_PLAYER;
- 
-                // The aura checks if the player has the aura that Zafod Boombox uses. (SPELL_EFFECT_APPLY_AREA_AURA_FRIEND)
-                if (!caster->ToPlayer()->HasAura(70348)) // Rocket Pack Useable
-                {
-                    // May have a custom error message.
-                    Spell::SendCastResult(caster->ToPlayer(), GetSpellInfo(), 0, SPELL_FAILED_CANT_DO_THAT_RIGHT_NOW);
-                    return SPELL_FAILED_CANT_DO_THAT_RIGHT_NOW;
-                }
- 
-                return SPELL_CAST_OK;
+                GetTarget()->CastSpell(GetTarget(), 68645, true);
             }
- 
+
+            void OnRemove(AuraEffect const* /*aurEff*/, AuraEffectHandleModes /*mode*/)
+            {
+                GetTarget()->RemoveAurasDueToSpell(68645);
+            }
+
             void Register()
             {
-                OnCheckCast += SpellCheckCastFn(spell_icc_rocket_pack_SpellScript::CheckRequirement);
+                OnEffectApply += AuraEffectApplyFn(spell_rocket_pack_AuraScript::OnApply, EFFECT_1, SPELL_AURA_DUMMY, AURA_EFFECT_HANDLE_REAL);
+                OnEffectRemove += AuraEffectRemoveFn(spell_rocket_pack_AuraScript::OnRemove, EFFECT_1, SPELL_AURA_DUMMY, AURA_EFFECT_HANDLE_REAL);
             }
         };
- 
-        class spell_icc_rocket_pack_AuraScript : public AuraScript
-        {
-            PrepareAuraScript(spell_icc_rocket_pack_AuraScript);
- 
-            void AfterRemove(AuraEffect const* aurEff, AuraEffectHandleModes /*mode*/)
-            {
-                Unit* caster = GetCaster();
-                caster->CastSpell(caster, 69193, true);
-                // 69193 does trigger the visual AoE effect (69192) through DB
-                caster->RemoveAurasDueToSpell(69188); // spell_linked_spell
-                caster->RemoveAurasDueToSpell(68721); // spell_linked_spell
-            }
- 
-            void Register()
-            {
-                AfterEffectRemove += AuraEffectRemoveFn(spell_icc_rocket_pack_AuraScript::AfterRemove, EFFECT_0, SPELL_AURA_DUMMY, AURA_EFFECT_HANDLE_REAL);
-            }
-        };
- 
-        SpellScript* GetSpellScript() const
-        {
-            return new spell_icc_rocket_pack_SpellScript();
-        }
  
         AuraScript* GetAuraScript() const
         {
-            return new spell_icc_rocket_pack_AuraScript();
+            return new spell_rocket_pack_AuraScript();
         }
 };
 
@@ -3373,10 +3350,10 @@ void AddSC_boss_gunship_battle()
     new npc_gunship_skybreaker();
     new npc_gunship_orgrimmar();
     new transport_gunship();
-    new spell_icc_remove_rocket_pack();
+    new spell_remove_rocket_pack();
     new spell_gb_heat_drain();
     new spell_gb_overheat_drain();
     new spell_gb_incinerating_blast();
     new spell_gb_burning_pitch();
-    new spell_icc_rocket_pack();
+    new spell_rocket_pack();
 }
